--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ url                      : https://mapaf2.github.io/ # the base hostname & proto
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "mapaf2/mapaf2.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+show_teasers             : true
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
