--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Mathieu Pagé Fortin"
 title_separator          : "-"
 name                     : &name "Mathieu Pagé Fortin"
 description              : &description "Portfolio"
-url                      : https://mapaf2.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://mapaf2.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "mapaf2/mapaf2.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
