--- a/_config.yml
+++ b/_config.yml
@@ -188,6 +188,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  misc:
+    output: true
+    permalink: /:collection/:path/
 
 
 # Defaults
@@ -228,10 +231,10 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _portfolio
+  # _misc
   - scope:
       path: ""
-      type: portfolio
+      type: misc
     values:
       layout: single
       author_profile: true
@@ -256,7 +259,7 @@ sass:
 permalink: /:categories/:title/
 # paginate: 5 # amount of posts to show
 # paginate_path: /page:num/
-timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+#timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins
